nested/NSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "nsgname" : {
            "type" : "String",

        }
    },
    "variables": {
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2016-03-30",
            "name": "[parameters('nsgname')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                {
                    "name": "Inboundhttps",
                    "properties": {
                        "access": "Allow",
                        "description": "Allow HTTPS Traffic.",
                        "direction": "Inbound",
                        "priority": 500,
                        "protocol": "*",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "destinationPortRange": "443",
                        "sourcePortRange": "*"
                    }
                },
                {
                    "name": "Inboundrdp",
                    "properties": {
                        "description": "Allows RDP traffic",
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "3389",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 501,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Inbiundssh",
                    "properties": {
                        "description": "allows ssh traffic",
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "22",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 502,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "outboundalltraffic",
                    "properties": {
                        "description": "allows all outbound traffic",
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "*",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 301,
                        "direction": "Outbound"
                    }
                }
                ]
           }
        }
    ],
    "outputs": {
    }
  }
